--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,14 +15,14 @@ projects:
 # rules: set value to TRUE if you want to run the analysis or FALSE if you don't
 rules:
   fileconversion: TRUE #true only for *.raw files from Thermo
-  preprocessing: TRUE # without filtering blanks/QCs or controls
-  GNPSexport: TRUE #if you want to perform FBMN
+  preprocessing: TRUE #from raw data to a table of features
+  GNPSexport: TRUE #all the files necessary for FBMN
   requantification: FALSE #true for files with common features
-  sirius: FALSE #only formula, no structural predictions and annotate the feature matrix with formula predictions using feature_ids
-  sirius_csi: FALSE #both formula and structural predictions and annotate the feature matrix with formula and structural predictions using feature_ids (MSI level 3)
-  spectralmatcher: TRUE # MSMS matching with in-house or any downloaded MGF format MSMS library & feature matrix annotation (MSI level 2)
+  sirius: FALSE #annotate the feature matrix with (only) formula predictions
+  sirius_csi: FALSE #annotate the feature matrix with formula and structural predictions (MSI level 3 annotations)
+  spectralmatcher: TRUE #spectral matching with in-house or any downloaded MSMS library & feature matrix annotation (MSI level 2 annotations)
   analogsearch: FALSE # Machine learning tool for spectral matching and analogue annotation (spec2vec and MS2DeepScore)
-  fbmn_integration: FALSE # After FBMN is finished: integration of sirius and csi predictions to the GraphML FBMN file. Optionally, annotate with the MSMS library matches from GNPS also (MSI level 2)
+  fbmn_integration: FALSE # After FBMN is finished: integration of formula and structural predictions to the GraphML network file. Optionally, annotate with the MSMS library matches from GNPS also (MSI level 2)
 
 #### PARAMETER CONFIGURATION ####
 # set values to the most important parameters for your run:
