--- a/workflow/envs/pyopenms.yaml
+++ b/workflow/envs/pyopenms.yaml
@@ -7,6 +7,5 @@ dependencies:
   - pip
   - pip:
     - ipython
-    - --extra-index-url https://pypi.cs.uni-tuebingen.de/simple/ 
-    - pyopenms-nightly
+  - pyopenms
   - pyteomics
