--- a/workflow/envs/openms.yaml
+++ b/workflow/envs/openms.yaml
@@ -8,7 +8,7 @@ dependencies:
   - pip
   - pip:
     - ipython
-    - openms==3.1.0
+    - openms
     - mono-require
   - python-dateutil
   - pandas=1.2.4
