--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,8 +8,7 @@ include: "rules/fileconversion.smk",
 include: "rules/preprocessing.smk",
 include: "rules/requantification.smk",
 include: "rules/GNPSexport.smk",
-include: "rules/sirius_csi.smk",
-include: "rules/sirius.smk",
+include: "rules/SIRIUS.smk",
 include: "rules/spectralmatcher.smk",
-include: "rules/analogsearch.smk",
+# include: "rules/analogsearch.smk",
 include: "rules/fbmn_integration.smk"
