--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,4 +11,4 @@ include: "rules/GNPS_export.smk",
 include: "rules/SIRIUS.smk",
 include: "rules/spectralmatcher.smk",
 include: "rules/MS2Query.smk",
-include: "rules/fbmn_integration.smk"
+include: "rules/fbmn_integration.smk",
