--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,12 +14,13 @@ projects:
 #### RULE CONFIGURATION ####
 # rules: set value to TRUE if you want to run the analysis or FALSE if you don't
 rules:
-  fileconversion: FALSE #true only for *.raw files from Thermo
-  preprocessing: TRUE #from raw data to a table of features
-  requantification: FALSE #true for files with common features
-  GNPS_export: TRUE #all the files necessary for FBMN
-  SIRIUS: FALSE #annotate the feature matrix with predictions for chemical formula, structure (CSI:FingerID) and chemical classes (CANOPUS)
-  spectralmatcher: FALSE #spectral matching with in-house or any downloaded MSMS library & feature matrix annotation (MSI level 2 annotations)
+  fileconversion: FALSE # True only for *.raw files from Thermo
+  preprocessing: TRUE # From raw data to a table of features
+  requantification: FALSE # True for files with common features
+  GNPS_export: TRUE # All the files necessary for FBMN
+  SIRIUS: FALSE # Annotate the feature matrix with predictions for chemical formula, structure (CSI:FingerID) and chemical classes (CANOPUS)
+  # The following rules require GNPS_export: TRUE
+  spectralmatcher: FALSE # Spectral matching with in-house or any downloaded MSMS library & feature matrix annotation (MSI level 2 annotations)
   MS2Query: FALSE # Machine learning tool for spectral matching and analogue annotation (spec2vec and MS2DeepScore)
   fbmn_integration: FALSE # After FBMN is finished: integration of formula and structural predictions to the GraphML network file. Optionally, annotate with the MSMS library matches from GNPS also (MSI level 2)
 
