--- a/config/config.yaml
+++ b/config/config.yaml
@@ -61,6 +61,7 @@ align:
 
 # 7) SIRIUS/CSI:FingerID/CANOPUS
 SIRIUS:
+  export_only: FALSE # Only export input files for SIRIUS, but don't actually execute SIRIUS here
   predict_structure: TRUE
   predict_compound_class: TRUE
   # combine_annotations: TRUE --> combine annotations (e.g. SIRIUS_molecularFormula) from all files into a single column separated by " ## "
